# 1997

./: .clang-format  CMakeLists.txt
assets/: arrow.frag  arrow.geom  arrow.vert  text.frag  text.vert
demo/: CMakeLists.txt  arrows.cc  arrows.h  demo.cc  demo.h  effect.cc  effect.h  geometry.h  gl_buffer.cc  gl_buffer.h  gl_check.h  gl_shader_program.cc  gl_shader_program.h  gl_texture.cc  gl_texture.h  gl_vertex_array.cc  gl_vertex_array.h  main.cc  noncopyable.h  panic.cc  panic.h  text.cc  text.h  util.cc  util.h  vec2.h
